--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
-  "name": "extendo",
-  "title": "extendo",
+  "name": "corpora",
+  "title": "Corpora",
   "description": "Opinionated, hand-crafted commands for modern, high-performance people.",
   "icon": "extension-icon.png",
   "author": "rishi-sadanandan",
@@ -13,10 +13,10 @@
   "commands": [
     {
       "name": "detail",
-      "title": "WTF is this?",
+      "title": "Explain Extension",
       "description": "Explain this extension with AI.",
       "mode": "view",
-      "subtitle": "Extendo",
+      "subtitle": "Corpora",
       "arguments": [
         {
           "name": "question",
@@ -31,14 +31,14 @@
       "title": "View Corpora",
       "description": "List all Corpora from LocalStorage.",
       "mode": "view",
-      "subtitle": "Extendo"
+      "subtitle": "Corpora"
     },
     {
       "name": "form",
       "title": "New Corpus",
       "description": "Set a new Corpus into LocalStorage.",
       "mode": "view",
-      "subtitle": "Extendo"
+      "subtitle": "Corpora"
     }
   ],
   "dependencies": {
