--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "title": "Corpora",
   "description": "Opinionated, hand-crafted commands for modern, high-performance people.",
   "icon": "extension-icon.png",
-  "author": "rishi-sadanandan",
-  "owner": "rishi-sadanandan",
+  "author": "keshsad",
+  "owner": "keshsad",
   "license": "MIT",
   "commands": [
     {
@@ -39,15 +39,15 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.102.4",
-    "@raycast/utils": "^1.17.0"
+    "@raycast/api": "^1.103.2",
+    "@raycast/utils": "^2.2.1"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^2.0.4",
     "@types/node": "22.13.10",
     "@types/react": "19.0.10",
     "eslint": "^9.22.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.2"
   },
   "scripts": {
