--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "Organize your agentic workflows and context windows with Raycast Pro.",
   "icon": "extension-icon.png",
   "author": "keshsad",
-  "owner": "keshsad",
+  "categories": [
+    "Documentation",
+    "Developer Tools",
+    "Productivity"
+  ],
   "license": "MIT",
   "commands": [
     {
